refactor: slack-clone 전체 리팩토링
[Backend]
- MessageService: CRUD 메서드 순서 정렬 (getUnreadCounts, markAsRead 위치 조정)
- WorkspaceService: CRUD 메서드 순서 정렬 (invite→C, getMembers→R, removeMember→D)
- OgController: URL 검증 로직을 OgService로 이전 (레이어 분리)
- FileUploadController: serveFile 로직을 LocalFileUploadService로 이전 (레이어 분리)
- application.yml: 하드코딩 제거, 모든 민감값 환경변수화
- SecurityConfig/WebSocketConfig: CORS origin 환경변수화
- Dockerfile: eclipse-temurin 17 → 21 (Java 21)

[Frontend]
- 인라인 스타일 전부 module.css로 분리 (page.tsx, workspace/page.tsx 포함)
- JSX/JS 주석 전부 제거 (page.tsx, workspace/page.tsx 포함)
- LoginForm/RegisterForm: 미사용 TokenResponse import 제거
- useMention: MentionDropdown 인라인 스타일 → mention.module.css
- useSocket.ts, useAuthStore.ts (레거시 중복 파일) 삭제
- 전체 hook 순서 통일 (state → handler → useEffect → return)

[Docker]
- docker-compose.yml: 주석 제거, CORS_ALLOWED_ORIGINS/LOCAL_UPLOAD_BASE_URL 환경변수 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>